versioned_docs/version-2.2.5/reference/configuration.md
---
title: "Configuration"
description: "Liquidsoap's Internal script directory."
---
### `configure.bindir` {#configure.bindir}

Liquidsoap's Internal script directory.

Type:

```
string
```

### `configure.default_font` {#configure.default_font}

Liquidsoap's default font file.

Type:

```
string
```

### `configure.libdir` {#configure.libdir}

Liquidsoap's library directory.

Type:

```
string
```

### `configure.logdir` {#configure.logdir}

Liquidsoap's logging directory.

Type:

```
string
```

### `configure.rundir` {#configure.rundir}

Liquidsoap's PID file directory.

Type:

```
string
```

### `liquidsoap.build_config.architecture` {#liquidsoap.build_config.architecture}

Build-time configuration value for architecture

Type:

```
string
```

### `liquidsoap.build_config.git_sha` {#liquidsoap.build_config.git_sha}

Git sha used to compile liquidsoap.

Type:

```
string?
```

### `liquidsoap.build_config.host` {#liquidsoap.build_config.host}

Build-time configuration value for host

Type:

```
string
```

### `liquidsoap.build_config.is_release` {#liquidsoap.build_config.is_release}

Is this build a release build?

Type:

```
bool
```

### `liquidsoap.build_config.is_snapshot` {#liquidsoap.build_config.is_snapshot}

Is this build a development snapshot?

Type:

```
bool
```

### `liquidsoap.build_config.native_c_compiler` {#liquidsoap.build_config.native_c_compiler}

Build-time configuration value for native_c_compiler

Type:

```
string
```

### `liquidsoap.build_config.native_c_libraries` {#liquidsoap.build_config.native_c_libraries}

Build-time configuration value for native_c_libraries

Type:

```
string
```

### `liquidsoap.build_config.ocaml_version` {#liquidsoap.build_config.ocaml_version}

OCaml version used to compile liquidspap.

Type:

```
string
```

### `liquidsoap.build_config.ocamlopt_cflags` {#liquidsoap.build_config.ocamlopt_cflags}

Build-time configuration value for ocamlopt_cflags

Type:

```
string
```

### `liquidsoap.build_config.optionals.alsa` {#liquidsoap.build_config.optionals.alsa}

Build-time configuration for alsa

Type:

```
bool
```

### `liquidsoap.build_config.optionals.ao` {#liquidsoap.build_config.optionals.ao}

Build-time configuration for ao

Type:

```
bool
```

### `liquidsoap.build_config.optionals.bjack` {#liquidsoap.build_config.optionals.bjack}

Build-time configuration for bjack

Type:

```
bool
```

### `liquidsoap.build_config.optionals.camlimages` {#liquidsoap.build_config.optionals.camlimages}

Build-time configuration for camlimages

Type:

```
bool
```

### `liquidsoap.build_config.optionals.dssi` {#liquidsoap.build_config.optionals.dssi}

Build-time configuration for dssi

Type:

```
bool
```

### `liquidsoap.build_config.optionals.faad` {#liquidsoap.build_config.optionals.faad}

Build-time configuration for faad

Type:

```
bool
```

### `liquidsoap.build_config.optionals.fdkaac` {#liquidsoap.build_config.optionals.fdkaac}

Build-time configuration for fdkaac

Type:

```
bool
```

### `liquidsoap.build_config.optionals.ffmpeg` {#liquidsoap.build_config.optionals.ffmpeg}

Build-time configuration for ffmpeg

Type:

```
bool
```

### `liquidsoap.build_config.optionals.flac` {#liquidsoap.build_config.optionals.flac}

Build-time configuration for flac

Type:

```
bool
```

### `liquidsoap.build_config.optionals.frei0r` {#liquidsoap.build_config.optionals.frei0r}

Build-time configuration for frei0r

Type:

```
bool
```

### `liquidsoap.build_config.optionals.gd` {#liquidsoap.build_config.optionals.gd}

Build-time configuration for gd

Type:

```
bool
```

### `liquidsoap.build_config.optionals.graphics` {#liquidsoap.build_config.optionals.graphics}

Build-time configuration for graphics

Type:

```
bool
```

### `liquidsoap.build_config.optionals.gstreamer` {#liquidsoap.build_config.optionals.gstreamer}

Build-time configuration for gstreamer

Type:

```
bool
```

### `liquidsoap.build_config.optionals.imagelib` {#liquidsoap.build_config.optionals.imagelib}

Build-time configuration for imagelib

Type:

```
bool
```

### `liquidsoap.build_config.optionals.inotify` {#liquidsoap.build_config.optionals.inotify}

Build-time configuration for inotify

Type:

```
bool
```

### `liquidsoap.build_config.optionals.irc` {#liquidsoap.build_config.optionals.irc}

Build-time configuration for irc

Type:

```
bool
```

### `liquidsoap.build_config.optionals.ladspa` {#liquidsoap.build_config.optionals.ladspa}

Build-time configuration for ladspa

Type:

```
bool
```

### `liquidsoap.build_config.optionals.lame` {#liquidsoap.build_config.optionals.lame}

Build-time configuration for lame

Type:

```
bool
```

### `liquidsoap.build_config.optionals.lastfm` {#liquidsoap.build_config.optionals.lastfm}

Build-time configuration for lastfm

Type:

```
bool
```

### `liquidsoap.build_config.optionals.lilv` {#liquidsoap.build_config.optionals.lilv}

Build-time configuration for lilv

Type:

```
bool
```

### `liquidsoap.build_config.optionals.lo` {#liquidsoap.build_config.optionals.lo}

Build-time configuration for lo

Type:

```
bool
```

### `liquidsoap.build_config.optionals.mad` {#liquidsoap.build_config.optionals.mad}

Build-time configuration for mad

Type:

```
bool
```

### `liquidsoap.build_config.optionals.mem_usage` {#liquidsoap.build_config.optionals.mem_usage}

Build-time configuration for mem_usage

Type:

```
bool
```

### `liquidsoap.build_config.optionals.memtrace` {#liquidsoap.build_config.optionals.memtrace}

Build-time configuration for memtrace

Type:

```
bool
```

### `liquidsoap.build_config.optionals.ogg` {#liquidsoap.build_config.optionals.ogg}

Build-time configuration for ogg

Type:

```
bool
```

### `liquidsoap.build_config.optionals.opus` {#liquidsoap.build_config.optionals.opus}

Build-time configuration for opus

Type:

```
bool
```

### `liquidsoap.build_config.optionals.osc` {#liquidsoap.build_config.optionals.osc}

Build-time configuration for osc

Type:

```
bool
```

### `liquidsoap.build_config.optionals.oss` {#liquidsoap.build_config.optionals.oss}

Build-time configuration for oss

Type:

```
bool
```

### `liquidsoap.build_config.optionals.portaudio` {#liquidsoap.build_config.optionals.portaudio}

Build-time configuration for portaudio

Type:

```
bool
```

### `liquidsoap.build_config.optionals.posix_time2` {#liquidsoap.build_config.optionals.posix_time2}

Build-time configuration for posix_time2

Type:

```
bool
```

### `liquidsoap.build_config.optionals.prometheus` {#liquidsoap.build_config.optionals.prometheus}

Build-time configuration for prometheus

Type:

```
bool
```

### `liquidsoap.build_config.optionals.pulseaudio` {#liquidsoap.build_config.optionals.pulseaudio}

Build-time configuration for pulseaudio

Type:

```
bool
```

### `liquidsoap.build_config.optionals.samplerate` {#liquidsoap.build_config.optionals.samplerate}

Build-time configuration for samplerate

Type:

```
bool
```

### `liquidsoap.build_config.optionals.sdl` {#liquidsoap.build_config.optionals.sdl}

Build-time configuration for sdl

Type:

```
bool
```

### `liquidsoap.build_config.optionals.shine` {#liquidsoap.build_config.optionals.shine}

Build-time configuration for shine

Type:

```
bool
```

### `liquidsoap.build_config.optionals.soundtouch` {#liquidsoap.build_config.optionals.soundtouch}

Build-time configuration for soundtouch

Type:

```
bool
```

### `liquidsoap.build_config.optionals.speex` {#liquidsoap.build_config.optionals.speex}

Build-time configuration for speex

Type:

```
bool
```

### `liquidsoap.build_config.optionals.srt` {#liquidsoap.build_config.optionals.srt}

Build-time configuration for srt

Type:

```
bool
```

### `liquidsoap.build_config.optionals.ssl` {#liquidsoap.build_config.optionals.ssl}

Build-time configuration for ssl

Type:

```
bool
```

### `liquidsoap.build_config.optionals.taglib` {#liquidsoap.build_config.optionals.taglib}

Build-time configuration for taglib

Type:

```
bool
```

### `liquidsoap.build_config.optionals.theora` {#liquidsoap.build_config.optionals.theora}

Build-time configuration for theora

Type:

```
bool
```

### `liquidsoap.build_config.optionals.tls` {#liquidsoap.build_config.optionals.tls}

Build-time configuration for tls

Type:

```
bool
```

### `liquidsoap.build_config.optionals.vorbis` {#liquidsoap.build_config.optionals.vorbis}

Build-time configuration for vorbis

Type:

```
bool
```

### `liquidsoap.build_config.optionals.winsvc` {#liquidsoap.build_config.optionals.winsvc}

Build-time configuration for winsvc

Type:

```
bool
```

### `liquidsoap.build_config.optionals.xmlplaylist` {#liquidsoap.build_config.optionals.xmlplaylist}

Build-time configuration for xmlplaylist

Type:

```
bool
```

### `liquidsoap.build_config.system` {#liquidsoap.build_config.system}

Build-time configuration value for system

Type:

```
string
```

### `liquidsoap.build_config.target` {#liquidsoap.build_config.target}

Build-time configuration value for target

Type:

```
string
```

### `liquidsoap.version` {#liquidsoap.version}

Liquidsoap version string.

Type:

```
string
```
